🩹 Fix horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   font-family: 'Readex Pro', sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .finger-button {
   color: #fff;
   text-transform: uppercase;
